--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -20,7 +20,14 @@ html{
   padding-left: 5px;
   color: #2db7f5;
 }
+#mobileheader div{
+ 
+  float: right;
+ 
+  
+ 
 
+}
 #mobileheader i{
   font-size: 0.5rem;
   float: right;
@@ -29,3 +36,4 @@ html{
   color: #2db7f5;
 
 }
+
