--- a/src/css/pc.css
+++ b/src/css/pc.css
@@ -16,3 +16,17 @@
 .footer{
   text-align: center;
 }
+
+.container{
+  padding-top: 10px;
+}
+
+.leftContainer{
+  width: 400px;
+  float: left;
+}
+
+.carousel{
+  width: 400px;
+  float: left;
+}
