--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -35,3 +35,97 @@ html{
   color: #2db7f5;
 
 }
+section{
+  background:#f6f6f6;width:6.9rem
+}
+.m_separate{
+  padding:.2rem .3rem;background:#f6f6f6;border-top:1px solid #e5e5e5;border-bottom:1px solid #e5e5e5
+}
+.m_article{
+  font-size:14px;padding:.2rem 0;border-bottom:1px solid #e5e5e5;margin:0 .3rem
+}
+
+.clearfix{
+  margin-top: 20px;
+}
+
+.no_special .special_section{
+  display:none
+}
+
+.m_article .m_article_img{
+  float:left;
+  width:27%;
+  height:1.4rem;
+  overflow:hidden;
+  position:relative;
+  margin-right:.2rem
+}
+
+.m_article .m_article_img .m_article_mark{
+  color:#fff;
+  background:#5da3e9;
+  font-size:.28rem;
+  text-align:center;
+  padding:.04rem;
+  position:absolute;
+  display:inline-block;
+  left:0;
+  top:0;
+  height:.4rem;
+  line-height:.4rem;
+  opacity:.9
+}
+.m_article .m_article_img img{
+  width:100%;
+  display:block;
+  min-height:1.4rem
+}
+
+.m_article_m1 .m_article_title{
+  display:none
+}
+.m_article_m1 .m_article_img{
+  width:100%;
+  margin:0
+}
+
+.m_article .m_article_info{
+  overflow:hidden;
+  padding-bottom:4px
+}
+.m_article .m_article_info .m_article_title{
+  text-align: left;
+  font-size:.34rem;
+  margin-bottom:.2rem;
+  color:#404040;
+  line-height:.42rem;
+  width:100%;
+  display:-webkit-box;
+  -webkit-line-clamp:2;
+  overflow:hidden;
+  -webkit-line-break:auto;
+  -webkit-box-orient:vertical
+}
+.m_article .m_article_desc .m_article_time{
+  font-size:.24rem;
+  color:#888;
+  display:inline-block
+}
+.m_article .m_article_desc .m_article_desc_l{
+  float:left
+}
+.m_article .m_article_desc .m_article_desc_r{
+  float:right;
+  background-size:contain;
+  background-position:left 0;
+  background-repeat:no-repeat;
+  color:#888;
+  line-height:.37rem
+}
+.m_article .m_article_desc .m_article_desc_r .iconfont{
+  padding:0 .1rem 0 0;
+  display:inline-block;
+  font-size:.28rem;
+  color:#a8a8a8
+}
