新闻详情页mobile端

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -129,3 +129,22 @@ section{
   font-size:.28rem;
   color:#a8a8a8
 }
+
+#mobileDetailsContainer .title,.article-title .title {
+    font-size: 0.44rem !important;
+    line-height: 1.4em
+}
+
+#mobileDetailsContainer .article-src-time {
+    font-size: 0.3rem !important;
+}
+
+#mobileDetailsContainer .article-content .txt {
+    font-size: 0.36rem;
+}
+#mobileDetailsContainer .ant-row{
+  margin-top: 20px;
+}
+.ucmobileList{
+  margin-top: 60px;
+}
